# arxiv-src-crawler

./: .gitignore  LICENSE  README.md  check_corrupt.ipynb  dev.ipynb  dev_downloader.ipynb  pyproject.toml  record_0-400.csv  record_0-400.json  record_1200-1222.csv  record_400-800.csv  record_800-1200.csv  run_download.py  test.ipynb
utils/color_log/: tracing_log.py
