[tool.poetry]
name = "arxiv-src-crawler"
version = "0.1.0"
description = ""
authors = ["LaZoark <emersonchen086@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
